--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
-    "nuxt": "3.0.0-rc.11",
     "@vueuse/core": "^8.7.5",
-    "@vueuse/nuxt": "^8.7.5"
+    "@vueuse/nuxt": "^8.7.5",
+    "nuxt": "3.0.0-rc.11"
   },
   "dependencies": {
+    "@mdi/font": "^7.0.96",
     "@metamask/detect-provider": "^1.2.0",
     "ethers": "^5.7.1",
     "mdi": "^2.2.43",
