--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@mdi/font": "^7.0.96",
     "@metamask/detect-provider": "^1.2.0",
+    "@nuxtjs/vercel-builder": "^0.22.1",
     "ethers": "^5.7.1",
     "mdi": "^2.2.43",
     "nuxt-web3.js": "^0.1.4",
