--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@mdi/font": "^7.0.96",
     "@metamask/detect-provider": "^1.2.0",
+    "axios": "^0.27.2",
     "ethers": "^5.7.1",
     "mdi": "^2.2.43",
     "nuxt-web3.js": "^0.1.4",
